# rust_cuda_c

./: .gitignore  Cargo.toml  build.rs
src/: axpb.c  axpb.cpp  axpb.cu  axpb.rs  main.rs
