[package]
name = "rust_cuda_c"
version = "0.1.0"
authors = ["Dinesh A <adepu.dinesh.a@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.4"
structopt = "0.3.13"

# cuda
# rustacuda = "0.1"
# rustacuda_core = "0.1"
# rustacuda_derive = "0.1"

libc = "0.2"

[build-dependencies]
cc = "1.0"