[package]
name = "rust_cuda_c"
version = "0.1.0"
authors = ["Dinesh A <adepu.dinesh.a@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.4"
structopt = "0.3.13"
libc = "0.2"

# cuda
[dependencies.rustacuda]
version = "0.1"
optional = true

[dependencies.rustacuda_core]
version = "0.1"
optional = true

[dependencies.rustacuda_derive]
version = "0.1"
optional = true


[build-dependencies]
cc = "1.0"

[features]
gpu = ["rustacuda", "rustacuda_core", "rustacuda_derive"]